# d3d12_mesh_shaders

./: .gitignore  CMakeLists.txt  README.md
include/D3D12MemAlloc/: D3D12MemAlloc.cpp  D3D12MemAlloc.h
shaders/: compile_shaders.bat  meshlet_as.hlsl  meshlet_ms.hlsl  meshlet_ps.hlsl
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  main.cpp  mesh.cpp  mesh.hpp  util.cpp  util.hpp
